# war-against-machines

./: .codecov.yml  .gitignore  .travis.yml  Cargo.toml  LICENCE  Makefile  README.md  appveyor.yml
make/: tileset.rs
make/tileset/: Cargo.toml
make/tileset/src/: main.rs
resources/: convert_colour.rs  make_tileset.py  tileset.rs  tileset.xcf
resources/Unused/: big_pit.xcf
resources/font/: glyphs.txt
resources/images/unit/: squaddie_back.aseprite
resources/references/: Untitled.ipynb
resources/tiles/: make_tileset.py
resources/unused/: Bullet rotation test.ipynb  change_fire_mode.xcf  end_turn.xcf  end_turn_2.xcf  font.xcf  inventory.xcf  save_game.xcf  tiles.xcf
src/: colours.rs  constants.rs  context.rs  error.rs  images.rs  items.rs  main.rs  map.rs  menu.rs  networking.rs  paths.rs  resources.rs  settings.rs  tiles.rs  traits.rs  ui.rs  units.rs  utils.rs  weapons.rs
src/battle/: ai.rs  animations.rs  battle.rs  commands.rs  drawer.rs  iter_2d.rs  map.rs  messages.rs  mod.rs  networking.rs  paths.rs  planning.rs  responses.rs  tiles.rs  ui.rs  units.rs  walls.rs
src/battle/map/: grid.rs  iter_2d.rs  mod.rs  tiles.rs  vision.rs  walls.rs
src/battle/networking/: client.rs  mod.rs  server.rs
src/context/: audio.rs  mod.rs  renderer.rs
src/context/shaders/: rect_150.glslf  rect_150.glslv  shader.frag  shader.vert
src/map/: ai.rs  animations.rs  commands.rs  drawer.rs  map.rs  mod.rs  paths.rs  tiles.rs  units.rs
unused_resources/: crosshair.xcf  end_turn.xcf  inventory.xcf  skull_pit.xcf  squaddie.xcf
unused_resources/gimp/: change_fire_mode.xcf  end_turn.xcf  inventory.xcf  tileset.xcf
