[package]
name = "war-against-machines"
version = "0.2.1"
authors = ["Expenses <expenses@airmail.cc>"]

[dependencies]

# General
## Random number generation
rand = "*"
## Unit pathfinding
pathfinding = "*"
## To use `Ord` functions like `min_by_key` with `f32`s
ord_subset = "*"
## For `retain_mut`
odds = "*"
## Line drawing for line-of-sight
line_drawing = "*"

# Serialization/deserialization
serde = "*"
serde_derive = "*"
## Human-readable settings
toml = "*"
## Efficiently-serialized data
bincode = "*"

# Resource loading
## Loading images
image = "*"
## Loading and playing sounds
rodio = "*"

# Engine
## Gfx backend over OpenGL
gfx = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
## Windowing
glutin = "*"