[package]
name = "war-against-machines"
version = "0.2.1"
authors = ["Expenses <expenses@airmail.cc>"]

[dependencies]

# General
## Random number generation
rand = "*"
## Unit pathfinding
pathfinding = "*"
## To use `Ord` functions like `min_by_key` with `f32`s
ord_subset = "*"
## Line drawing for line-of-sight
line_drawing = "*"
## Deriving is_enum
derive_is_enum_variant = "*"
# Serialization/deserialization
serde = "*"
serde_derive = "*"
## Human-readable settings
toml = "*"
## Efficiently-serialized data
bincode = "*"

# Resource loading
## Loading images
image = "*"
## Loading and playing sounds
rodio = "*"
## Cpal is needed for `default_endpoint` and is updated before rodio so we pin the version
cpal = "0.4"

# Engine
## Gfx backend over OpenGL
gfx = "*"
gfx_device_gl = "*"
gfx_window_glutin = "*"
## Windowing
glutin = "*"

## For `retain_mut`
[dependencies.odds]
version = "*"
features = ["std-vec"]